ensure buffers are aligned 32 for SSE2 should fix #4948

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34047 a95241bf-73f2-0310-859d-f6bbb57e9c96